[project]
name = "password-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Kargopolov",email = "kur4g1n@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.399"
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
